# smartbell

dairy-milk-tracker/: CLEAN-CODE-README.md  README.md  TROUBLESHOOTING-DB.md  TROUBLESHOOTING.md  UPDATED-README.md  start.sh
dairy-milk-tracker/backend/: dairy_milk_tracker.db  fix_database.py  pyproject.toml
dairy-milk-tracker/backend/app/: auth.py  database.py  main.py
dairy-milk-tracker/backend/app/api/: api.py
dairy-milk-tracker/backend/app/api/endpoints/: auth.py  herds.py  milk_production.py  users.py
dairy-milk-tracker/backend/app/models/: herd.py  milk_production.py  user.py
dairy-milk-tracker/backend/app/schemas/: herd.py  milk_production.py  user.py
dairy-milk-tracker/backend/tests/: test_api.py
dairy-milk-tracker/frontend/: package-lock.json  package.json  playwright.config.js
dairy-milk-tracker/frontend/public/: index.html  manifest.json
dairy-milk-tracker/frontend/src/: App.css  App.js  Mobile.css  index.css
dairy-milk-tracker/frontend/src/components/: Footer.js  Header.js  MobileDetector.js
dairy-milk-tracker/frontend/src/contexts/: AuthContext.js
dairy-milk-tracker/frontend/src/pages/: Dashboard.js  DashboardNew.js  Login.js  Onboarding.js  Profile.js  ProfileNew.js  RanchNew.js  Register.js
dairy-milk-tracker/frontend/src/pages/herds/: AddHerd.js  EditHerd.js  HerdDetail.js  HerdsList.js
dairy-milk-tracker/frontend/src/pages/milk/: AddMilkProduction.js  EditMilkProduction.js  MilkProductionList.js
dairy-milk-tracker/frontend/tests/: auth.spec.js
