[tool.poetry]
name = "dairy-milk-tracker-backend"
version = "0.1.0"
description = "Backend for Dairy Milk Production Tracking"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
aiosqlite = "^0.19.0"
email-validator = "^2.2.0"
bcrypt = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"
black = "^24.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
